chore: Added core routes to openapi
