# internal/types/api.go
@@ -13,13 +13,13 @@ type GetMeResult struct {
 }
 
 type GetMeResponse struct {
-	User    *models.User    `json:"user"`
-	Session *models.Session `json:"session"`
+	User    *models.User    `json:"user" required:"true" nullable:"false"`
+	Session *models.Session `json:"session" required:"true" nullable:"false"`
 }
 
 type SignOutRequest struct {
-	SessionID  *string `json:"session_id,omitempty"`
-	SignOutAll *bool   `json:"sign_out_all,omitempty"`
+	SessionID  *string `json:"session_id,omitempty" nullable:"true"`
+	SignOutAll *bool   `json:"sign_out_all,omitempty" nullable:"true"`
 }
 
 func (req *SignOutRequest) Validate() error {
@@ -29,10 +29,10 @@ func (req *SignOutRequest) Validate() error {
 	return nil
 }
 
-type SignOutResponse struct {
-	Message string `json:"message"`
+type SignOutResult struct {
+	Message string
 }
 
-type SignOutResult struct {
-	Message string `json:"message"`
+type SignOutResponse struct {
+	Message string `json:"message" required:"true" nullable:"false"`
 }
